--- a/index.html
+++ b/index.html
@@ -1,35 +1,38 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
- <!DOCTYPE html>
- <html lang="en">
- <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>James Timms' Profile</title>
- </head>
- <body>
-    <h1>James Timms' Portfolio</h1>
-    <h2>I'm a Web Developer :)</h2>
-    <hr />
-    <h3><a href="./public/movie-rabking.html">Movie Ranking Project</a></h3>
-    <img src="./assets/images/Screen Shot 2024-08-19 at 5.51.25 PM.png" height="200" alt="Movie ranking project preview"/>
-    <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
-    <img src="./assets/images/Screen Shot 2024-08-19 at 5.52.36 PM.png" height="200" alt="Birthday Invite Project preview"/>
-    <hr />
-    <a href="./public/about.html"></a>About Me
-    <a href="./public/contact.html"></a>Contact</a>
- </body>
- </html>
-
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
+<!DOCTYPE html>
+<h1>James Timms Resume</h1>
+<img src="./assets/images/Profile Picture.jpg"
+width="300"
+height="400"
+<hr>
+<h2>Summary 
+   <h4>
+      With over a decade in Hospitailty to a pivot into the tech world, I'm hyper focused on user centric designs, speaking the language of code and making things look demure
+   </h4>
+   <hr>
+</h2>
+<h2>Education
+   <h4><ol><li>Southern New Hampshire University - Bachelors in Business Administration </li>
+   <li>DesignLab - UX Academy Certificate</li>
+   <li>Freedom High School</li></ol></h4>
+</h2>
+<hr>
+<h2>Work Experience
+   <h4><ol><li>Server - Rpm Italian</li>
+   <li>Lead UX Designer - Premier Vision</li>
+   <li>Acquistions Manager/Real Estate Broker - Property Liquidator </li></ol></h4>
+</h2>
+<hr>
+<h2>Skills</h2>
+   <h4><ul><li>User Interviews, Prototyping, HTML, CSS, Wireframing, Information Technology, Usability Testing, Analysis, Responsive Design,
+      High Fidelity, Figma, Figjam, Miro
+   </li></ul>
+</h4>
+<hr>
+<h2>Other
+   <h4><ol><li><a href="https://www.jamesfredericktimms.com/contact">My Contact</a></li>
+   <li><a href="https://www.jamesfredericktimms.com/about">About Me</a></li>
+   </h4>
+</h2>
+<footer>
+   <p>© 2024 OasisUX Design</p>
+ </footer>
